evento en pagina productos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <br/>
         <section>
           <h2 class="margen-m">Productos destacados</h2>
-        <div class="container">
+        <div id="container">
           <div class="card insta">
             <img src="./imagenes/amplificadord.jpg" alt="amplificador" width="150" height="150"/>
             <h4>Amplificador</h4>
@@ -68,7 +68,7 @@
             <a href="">Comprar</a>
           </div>
         </div>
-        <div class="container">
+        <div id="container">
           <div class="card inste">
             <img src="./imagenes/microfonod.jpg" alt="microfono"  width="150" height="150"/>
             <h4>Microfono</h4>
@@ -93,8 +93,10 @@
             <p>$ 83.218</p>
             <a href="">Comprar</a>
           </div>
-        </div>
+        </div> 
+        <button type="button" class=" btn btn-outline-warning">Productos
         <select name="lista" id="lista"></select>
+      </button>
         </section>
         <section class="bloque">
           <div class="bloque__grid text">
