--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -33,75 +33,11 @@
   </header>
   <h1 class="link-productos">Productos</h1>
     <main>
-      <section  class="list-instrumentos">
-          <h2>Instrumentos</h2>
-        <ul class="fs-5">
-           <li>Viento</li>
-           <li>Cuerdas</li>
-           <li>Percusión</li>
-           <li>Teclado</li>
-        </ul>
-      </section>
-        <div class="container">
-            <div class="card">
-                <img src="../imagenes/bongod.jpg" alt="bongo"  width="150" height="150"/>
-                <h4>Bongo</h4>
-                <p>21.643</p>
-                <a href="">Comprar</a>
-            </div>
-            <div class="card">
-              <img src="../imagenes/guitarra.jpg" alt="guitarra"  width="150" height="150"/>
-              <h4>Guitarra</h4>
-              <p>$ 112.889</p>
-              <a href="">Comprar</a>
-            </div>
-            <div class="card">
-              <img src="../imagenes/Saxo.jpg" alt="saxo"  width="150" height="150"/>
-              <h4>Saxo</h4>
-              <p>$ 134.152</p>
-              <a href="">Comprar</a>
-            </div>
-            <div class="card">
-              <img src="../imagenes/bateri.jpg" alt="bateria"  width="150" height="150"/>
-              <h4>Batería</h4>
-              <p>$ 203.488</p>
-              <a href="">Comprar</a>
-            </div>
-          </div>
-      <section  class="list-accesorios">
-        <h2 class="fs-2">Accesorios</h2>
-        <ul class="fs-5">
-           <li>Parches</li>
-           <li>Cuerdas</li>
-           <li>Correas</li>
-       </ul>
-       </section>
-       <div class="container">
-        <div class="card">
-          <img src="../imagenes/correas.jpg" alt="correas"  width="150" height="150"/>
-          <h4>Correas</h4>
-          <p>$ 3.899</p>
-          <a href="">Comprar</a>
-        </div>
-        <div class="card">
-          <img src="../imagenes/palillos.jpg" alt="palillos"  width="150" height="150"/>
-          <h4>palillos</h4>
-          <p>$ 2.209</p>
-          <a href="">Comprar</a>
-        </div>
-        <div class="card">
-          <img src="../imagenes/parchesa.jpg" alt="parches"  width="150" height="150"/>
-          <h4>Parches</h4>
-          <p>$ 5.316</p>
-          <a href="">Comprar</a>
-        </div>
-        <div class="card">
-          <img src="../imagenes/puas.jpg" alt="puas"  width="150" height="150"/>
-          <h4>Puas</h4>
-          <p>$ 590</p>
-          <a href="">Comprar</a>
-        </div>
-      </div>
+           <h2>Instrumentos y Accesorios</h2>
+
+      <div id="container">
+    
+       </div>
     </main>   
     <footer class="margen-m">
       <div class="row text-light">
@@ -128,5 +64,6 @@
   <div class="position-fixed bottom-0 end-0 mb-5 me-5">
     <a href="https://www.whatsapp.com/?lang=es"><img src="https://cdn.iconscout.com/icon/free/png-512/whatsapp-circle-1868968-1583132.png" alt="whatsapp" width="60" height="60"></a>
   </div>
+  <script src="../productos.js"></script>
 </body>
 </html>
