--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -28,8 +28,13 @@
             <a class="nav-link fs-4" href="../paginas/contactos.html">Contactos</a>
           </div> 
         </div>
+        <a class="carrito" >
+          <span id="cardCounter"></span>
+          <img class="imgcarrito" src="../imagenes/carrito.png" alt="carrito" width="70" height="70">
+        </a>
       </div>
     </nav>
+
   </header>
   <h1 class="link-productos">Productos</h1>
     <main>
